--- a/style.css
+++ b/style.css
@@ -6,6 +6,7 @@
   box-sizing: border-box;
 }
 
+/* Font Faces */
 @font-face {
   font-family: "Plain-regular";
   src: url("./Fonts/plain-regular-webfont.ttf");
@@ -23,27 +24,25 @@
   src: url("./Fonts/silkserif-regularitalic-webfont.ttf");
 }
 
-/* Set full height and width for HTML and body */
+/* HTML and Body */
 html,
 body {
   height: 100%;
   width: 100%;
   font-family: "Plain-regular";
+  position: relative;
 }
 
-main {
-}
-
+/* Preloader */
 .preloader {
   height: 100vh;
   width: 100vw;
-  position: relative;
-
+  position: absolute;
+  top: 0;
+  left: 0;
   color: #fff;
   background-color: #0b0b0b;
-  position: relative;
   padding: 6vw 5vw;
-  /* transition: all 0.35s cubic-bezier(0.3, 0.86, 0.36, 0.95); */
 
   & .container {
     height: 100%;
@@ -59,16 +58,13 @@ main {
       opacity: 0;
       width: 25%;
       line-height: 1.5;
-
+      transition: opacity 0.5s cubic-bezier(0.3, 0.86, 0.36, 0.95);
       text-align: right;
       padding-right: 4.5vw;
-
       position: absolute;
       left: 0;
-
       font-family: "silkserif-regular";
       font-size: 3.2vw;
-
       z-index: 1000;
     }
 
@@ -95,13 +91,15 @@ main {
         font-weight: 300;
         -webkit-text-stroke: 1px #fff;
         color: transparent;
+        animation: changeStyle 2s infinite 0.5s;
       }
     }
+
     & #loader-bottom {
       opacity: 0;
       width: 100%;
       margin-top: 5vw;
-
+      transition: opacity 0.35s cubic-bezier(0.3, 0.86, 0.36, 0.95);
       & p {
         max-width: 50%;
         margin-left: 25%;
@@ -113,6 +111,35 @@ main {
   }
 }
 
+/* Keyframes */
+@keyframes changeStyle {
+  0%,
+  100% {
+    font-family: "Plain-regular";
+    color: white;
+    opacity: 1;
+  }
+  25%,
+  75% {
+    opacity: 0;
+  }
+  50% {
+    font-family: "silkserif-light";
+    color: transparent;
+    opacity: 1;
+  }
+}
+
+/* Main */
+main {
+  & .page1 {
+    height: 100vh;
+    width: 100vw;
+    background-color: #151515;
+  }
+}
+
+/* Media Queries */
 @media (max-width: 768px) {
   .preloader {
     display: flex;
@@ -149,7 +176,7 @@ main {
 
       & #loader-bottom {
         & p {
-          margin-left: 0%;
+          margin-left: 0;
           font-size: 2.5vw;
         }
       }
