--- a/style.css
+++ b/style.css
@@ -33,8 +33,20 @@ body {
   position: relative;
 }
 
+.cursor {
+  position: fixed;
+  height: 3vw;
+  width: 3vw;
+  border: 1px solid gray;
+  border-radius: 50%;
+  transform: translate(-50%, -50%);
+  transition: transform cubic-bezier(1, 0.04, 0.54, 1.07);
+  pointer-events: none;
+}
+
 /* Preloader */
 .preloader {
+  /* display: none; */
   height: 100vh;
   width: 100vw;
   position: absolute;
@@ -43,6 +55,7 @@ body {
   color: #fff;
   background-color: #0b0b0b;
   padding: 6vw 5vw;
+  transition: 0.5s cubic-bezier(1, 0.04, 0.54, 1.07);
 
   & .container {
     height: 100%;
@@ -132,10 +145,82 @@ body {
 
 /* Main */
 main {
+  height: 100%;
+  width: 100%;
+  padding: 0vw 5vw;
+
+  color: white;
+  background-color: #151515;
+
   & .page1 {
-    height: 100vh;
-    width: 100vw;
+    height: 100%;
+    width: 100%;
+
     background-color: #151515;
+
+    & header {
+      height: 20vh;
+      display: flex;
+
+      & #header-left {
+        width: 25%;
+        height: 100%;
+        display: flex;
+        align-items: center;
+
+        & button {
+          background-color: transparent;
+          border: none;
+
+          & rect {
+            color: white;
+          }
+        }
+
+        & .brand__svg {
+          margin-left: 3vw;
+        }
+      }
+
+      & #header-right {
+        width: 75%;
+        height: 100%;
+        display: flex;
+        align-items: center;
+        justify-content: flex-end;
+        gap: 3vw;
+        pointer-events: none;
+
+        & span {
+          font-size: 1vw;
+        }
+      }
+    }
+  }
+
+  & .hero-section {
+    width: 75%;
+    margin-top: 5vw;
+    margin-left: auto;
+
+    & .hero {
+      font-size: 7.5vw;
+      line-height: 7.5vw;
+      text-transform: uppercase;
+      overflow: hidden;
+      cursor: context-menu;
+
+      & p {
+        & .hero-text {
+          transition: 0.25s color ease-in-out;
+
+          &:hover {
+            -webkit-text-stroke: 1px white;
+            color: transparent;
+          }
+        }
+      }
+    }
   }
 }
 
