--- a/style.css
+++ b/style.css
@@ -282,6 +282,107 @@ main {
   }
 }
 
+.page4 {
+  position: relative;
+  min-height: 100%;
+  width: 100%;
+  padding-left: 25%;
+  color: rgba(255, 255, 255, 0.9);
+
+  & .about-section-headline {
+    position: relative;
+    height: 11vw;
+    margin-bottom: 4vw;
+
+    & h1 {
+      font-size: 7.5vw;
+      font-weight: 300;
+      text-transform: uppercase;
+    }
+
+    & .headline-border {
+      display: block;
+      height: 1px;
+      background-color: white;
+
+      position: absolute;
+      bottom: 0;
+      left: 0;
+      right: 0;
+    }
+  }
+
+  & [data-word="first-paragraph"] {
+    width: 60%;
+    padding-bottom: 6vw;
+    font-size: 2.5vw;
+  }
+
+  & .page4-bottom {
+    display: flex;
+    width: 100%;
+    height: 150%;
+
+    & .page4-image {
+      height: 100%;
+      width: 120%;
+
+      & img {
+        height: 100%;
+        width: 100%;
+        object-fit: cover;
+      }
+    }
+
+    & .page4-paragraph {
+      & .p4-paragraph {
+        padding-bottom: 2vw;
+        padding-left: 2vw;
+        font-size: 1.1vw;
+        width: 74%;
+        line-height: 1.5;
+      }
+    }
+  }
+
+  & .page4-about-section {
+    width: 50%;
+    background-color: rgb(63, 125, 244);
+    padding: 4vw 4vw;
+    margin-bottom: 5vw;
+    position: absolute;
+    right: 0%;
+    bottom: -40%;
+
+    
+    & .rewards-row {
+      width: 100%;
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+      border-top: 1px solid white;
+      padding: 2vw 0vw;
+
+      & p {
+        font-size: 1.5vw;
+      }
+
+      &:nth-child(1) {
+        border-top: none;
+      }
+      
+      &:nth-child(5) {
+        border-bottom: 1px solid white;
+      }
+
+      & P:nth-child(2) {
+        width: 56%;
+        font-size: 1.2vw;
+      }
+    }
+  }
+}
+
 /* Media Queries */
 @media (max-width: 768px) {
   .preloader {
@@ -369,6 +470,97 @@ main {
           left: -5vw;
           height: 50%;
           width: 112%;
+        }
+      }
+    }
+
+    & .page4 {
+      position: relative;
+      min-height: 100%;
+      width: 100%;
+      color: rgba(255, 255, 255, 0.9);
+      padding-left: 0%;
+
+      & .about-section-headline {
+        position: relative;
+        height: 18vw;
+        margin-bottom: 12vw;
+
+        & h1 {
+          font-size: 10vw;
+          font-weight: 300;
+          text-transform: uppercase;
+        }
+
+        & .headline-border {
+          display: block;
+          height: 1px;
+          background-color: white;
+
+          position: absolute;
+          bottom: 0;
+          left: 0;
+          right: 0;
+        }
+      }
+
+      & [data-word="first-paragraph"] {
+        padding-bottom: 6vw;
+        font-size: 5.5vw;
+      }
+
+      & .page4-bottom {
+        display: flex;
+        flex-wrap: wrap-reverse;
+
+        & .page4-image {
+          height: 100%;
+          width: 100%;
+
+          & img {
+            height: 100%;
+            width: 100%;
+            object-fit: cover;
+          }
+        }
+
+        & .page4-paragraph {
+          & .p4-paragraph {
+            padding-bottom: 6vw;
+            font-size: 3.5vw;
+            width: 75%;
+            line-height: 1.5;
+          }
+        }
+      }
+
+      & .page4-about-section {
+        position: relative;
+        width: 100%;
+        background-color: rgb(63, 125, 244);
+        padding: 0vw 5vw 12vw;
+        margin-bottom: 5vw;
+
+        & .rewards-row {
+          display: flex;
+          align-items: center;
+          justify-content: space-between;
+          border-top: 1px solid white;
+          border-bottom: 1px solid white;
+          padding: 6vw 0vw;
+
+          & p {
+            font-size: 3.5vw;
+          }
+
+          &:nth-child(1) {
+            border-top: none;
+          }
+
+          & P:nth-child(2) {
+            font-size: 2.6vw;
+            width: 52%;
+          }
         }
       }
     }
