--- a/style.css
+++ b/style.css
@@ -354,7 +354,6 @@ main {
     right: 0%;
     bottom: -40%;
 
-    
     & .rewards-row {
       width: 100%;
       display: flex;
@@ -370,7 +369,7 @@ main {
       &:nth-child(1) {
         border-top: none;
       }
-      
+
       &:nth-child(5) {
         border-bottom: 1px solid white;
       }
@@ -382,6 +381,100 @@ main {
     }
   }
 }
+
+.page5-top-border {
+  height: fit-content;
+  width: 100%;
+  padding-left: 25%;
+  margin-top: 40vw;
+
+  & .page5-border {
+    display: block;
+    height: 1px;
+    background-color: white;
+  }
+
+  & p {
+    font-size: 1vw;
+    padding: 2vw 0vw;
+  }
+}
+
+.page5 {
+  height: 100%;
+  width: 100%;
+  margin-top: 3vw;
+
+  & .scrollbar-container {
+    position: relative;
+    height: 20vh;
+    width: 200%;
+    display: flex;
+    text-transform: uppercase;
+
+    font-family: "Plain-regular";
+    color: transparent;
+    -webkit-text-stroke: 1px white;
+    animation: moveForward 35s linear infinite;
+
+    &:nth-child(2n) {
+      animation: moveBackward 35s linear infinite;
+    }
+
+    &:nth-child(2) {
+      font-family: "silkserif-regular";
+
+      & p:nth-child(2n) {
+        font-family: "Plain-regular";
+      }
+    }
+
+    & .page5-scrollbar {
+      display: flex;
+      align-items: center;
+      white-space: nowrap;
+    }
+
+    & P {
+      font-size: 7vw;
+
+      &::before {
+        content: "—";
+        font-weight: 300;
+        font-family: "Plain-regular";
+        margin: 0vw 2vw;
+      }
+
+      &:nth-child(2n) {
+        font-family: "silkserif-regular";
+      }
+    }
+  }
+}
+
+@keyframes moveForward {
+  0% {
+    transform: translateX(0);
+  }
+  100% {
+    transform: translateX(-100%);
+  }
+}
+
+@keyframes moveBackward {
+  0% {
+    transform: translateX(-100%);
+  }
+  100% {
+    transform: translateX(0%);
+  }
+}
+
+/* ------------------------------------------------------------------------------------------ */
+/* ------------------------------------------------------------------------------------------ */
+/* ------------------------------Media query starts-------------------------------------- */
+/* ------------------------------------------------------------------------------------------ */
+/* ------------------------------------------------------------------------------------------ */
 
 /* Media Queries */
 @media (max-width: 768px) {
@@ -561,6 +654,35 @@ main {
             font-size: 2.6vw;
             width: 52%;
           }
+        }
+      }
+    }
+
+    & .page5-top-border {
+      height: fit-content;
+      width: 100%;
+      padding-left: 0%;
+      margin-top: 20vw;
+
+      & .page5-border {
+        display: block;
+        height: 1px;
+        background-color: white;
+      }
+
+      & p {
+        font-size: 3vw;
+        padding: 6vw 0vw;
+      }
+    }
+
+    & .page5 {
+      height: fit-content;
+      & .scrollbar-container {
+        height: 7vh;
+
+        & P {
+          font-size: 12vw;
         }
       }
     }
